# microblog.pub

./: .dockerignore  .gitignore  .python-version  Dockerfile  Dockerfile.prod  ENVVARS.md  Makefile  README.md  config.py  docker-compose.yml  podman-run.sh  podman-stop.sh  pyproject.toml  run.sh  run_dev.sh  run_k8.sh  tox.ini
app/: main.py  uploads.py
app/templates/: layout.html
blueprints/: api.py  tasks.py
docs/: docker.md  kubernetes.md
kubernetes/: deploy-kubernetes-sample.yaml  deploy-kubernetes.yaml  template-backend.yaml  template-microblogpub.yaml
kubernetes/templates/: backend.yaml  config.yaml  frontend.yaml
requirements/: common.txt  dev.txt  prod.txt  test.txt
scripts/: deps-dn.sh  deps-up.sh  docker-compose.yml  generate_container_secret.py  podman-deps-dn.sh  podman-deps-up.sh
src/: setup.py
src/microblog.pub/: config.py
src/microblog.pub/blueprints/: admin.py
src/microblogpub/: __init__.py  app.py  config.py  startup.py
src/microblogpub/blueprints/: admin.py  api.py  indieauth.py  tasks.py  well_known.py
src/microblogpub/core/: activitypub.py  db.py  feed.py  gc.py  inbox.py  indexes.py  migrations.py  notifications.py  outbox.py  remote.py  shared.py  tasks.py
src/microblogpub/utils/: blacklist.py  highlight.py  key.py  migrations.py  og_meta.py  template_filters.py
src/templates/: layout.html  new.html  utils.html
src/tests/: conftest.py  test_intg_app_routes__no_login.py  test_intg_federation.py  test_intg_index_page.py  test_unit_config.py  test_unit_env.py
src/tests/fixtures/: test_app.py
tests/: conftest.py  test_intg_index_page.py
tests/fixtures/: config_fixture.py
