[tool.poetry]
name = "microblog.pub"
version = "0.1.0"
description = ""
authors = ["Michael Penhallegon <mike@hematite.tech>"]

[tool.poetry.dependencies]
python = "^3.10"
libsass = "^0.21.0"
python-dateutil = "^2.8.2"
tornado = "^6.1"
piexif = "^1.1.3"
python-u2flib-server = "^5.0.1"
Flask = "^2.0.2"
Flask-WTF = "^1.0.0"
pymango = "^0.1.1"
timeago = "^1.0.15"
bleach = "^4.1.0"
itsdangerous = "^2.0.1"
bcrypt = "^3.2.0"
mf2py = "^1.1.2"
passlib = "^1.7.4"
PyYAML = "^6.0"
Pillow = "^8.4.0"
emoji-unicode = "^0.4"
html5lib = "^1.1"
Pygments = "^2.10.0"
flask-talisman = "^0.8.1"
cachetools = "^4.2.4"
feedgen = "^0.9.0"
html2text = "^2020.1.16"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
tox = "^3.24.4"
yapf = "^0.31.0"
requests = "^2.26.0"
mypy = "^0.910"
ipdb = "^0.13.9"
ipython = "^7.30.0"
flake8 = "^4.0.1"
little_boxes = { git = "https://github.com/howaboutudance/little-boxes.git" }

[tool.mypy]
python_version="3.8"
exclude="venv*"

[tool.flake8]
max-line-length=120

[tool.yapf]
based_on_style="google"
ident_width=2

[tool.isort]
line_length=120
force_single_line=true
src_paths=["src/microblog.pub", "src/tests"]

[tool.pytest.ini_options]
markers =  [
    "integration",
    ]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"